--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/sign-upPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/sign-upPage.css
@@ -19,7 +19,7 @@
 		color: black;
 		
 		display: flex;
-		margin-bottom: 20px;
+		margin-bottom: 0px;
 	}
 	
 		#storeLocation {
@@ -66,7 +66,7 @@
 		
 		#signUpDiv {
 			width: 100%;
-			height: 700px;
+			height: 1000px;
 			
 			display: flex;
 		}
@@ -77,8 +77,8 @@
 				display: flex;
 				flex-direction: column;
 				
-				justify-content: center;
-				align-items: center;
+				justify-content: start;
+				align-items: start;
 				text-align: center;
 				
 				margin: auto;
@@ -90,7 +90,7 @@
 				justify-content: center;
 				align-items: center;
 				
-				padding-top: 140px;
+				padding-top: 0px;
 		        margin-bottom: 10px;
 		        font-size: 50px;
 		      }
