--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
@@ -195,11 +195,11 @@
 						}
 			      	
 			      	
-			      	
+			      	/*Topping Instructions - Start */
 			      	#addInstructions-3 {
 						width: 100%;
 						height: 30px;
-						margin-bottom: 5px;
+						margin-bottom: 15px;
 						font-size: 25px;
 						
 						display: flex;
@@ -225,21 +225,71 @@
 						text-align: center;
 						margin-left: 100px;
 					}
-			      	#addInstructions-5 {
-						width: 100%;
-						height: 25px;
-						margin-bottom: 5px;
-						font-size: 17px;
+			      	
+			      	#instructions {
+						background-color: rgb(77, 166, 255);
+						margin-top: 20px;
+						margin-bottom: 20px;
+					}
+					 #instructionsTitleDiv {
+				        width: 99.7%;
+						height: 40px;
+						margin-bottom: 0px;
+						font-size: 25px;
 						
 						display: flex;
 						
-						justify-content: left;
+						justify-content: center;
 						align-items: center;
 						text-align: center;
 						
-						margin-bottom: 25px;
-						margin-left: 100px;
-					}
+						background-color: rgb(128, 191, 255);
+						color: black;
+						
+						border: 2px solid black;
+						cursor: pointer;
+				    }
+				    #instructionsTitle {
+				    	color: rgb(179, 89, 0);
+						text-decoration: underline;
+						margin-left: 10px;
+						margin-right: 10px;
+				    }
+				      
+				    .dropdown-content-instructions {
+				      position: relative; 
+				      z-index: 1;  /* make sure the content is above other elements on the page */
+				      display: flex;  
+				      padding-bottom: 5px;
+				      padding-left: 10px;
+				      padding-top: 5px;
+				      
+				      border: 2px solid black;
+				    }
+				    
+					.instructionsContent {
+						padding-left: 30px;
+				        font-family: Trebuchet MS;
+				        color: black;
+				        
+				    }
+			   /*Topping Instructions - END*/
+			      	
+			       #addItemToppingRow {
+			       		width: 100%;
+				      	height: 40px;
+				      	display: flex;
+				      	flex-direction: row;
+				      	justify-content: left;
+						align-items: center;
+				      	
+				        margin-bottom: 10px;
+				        
+				        border: 3px solid gray;
+			        	border-radius: 3px;
+			        	padding: 3px;
+			        	margin-bottom: 20px;
+			       }
 			      	
 			       .addItemToppingCol {
 			       		width: 100%;
@@ -253,36 +303,92 @@
 						font-size: 17px;
 				      	
 			       }
-			       #addItemToppingCol1 {
+			       
+			       #add-topping-title {
 			       		width: 7%;
 			       }
-			       #addItemToppingCol2 {
+			       #add-topping-name {
 			       		width: 17%;
-			       		
 			       }
-			       #addItemToppingCol3 {
+			       #add-topping-type {
 			       		width: 14%;
 			       		padding-right: 0px;
 			       }
-			       #addItemToppingCol3point5 {
+			       #add-topping-types {
+			       		visibility: hidden;
 			       		width: 21%;
 			       		padding-left: 10px;
 			       }
-			       #addItemToppingCol4 {
+			       #add-topping-isPizza {
 			       		width: 14%;
 			       		margin-left: 5px;
-			       		padding-right: 40px;
+			       		padding-right: 60px;
 			       		
 			       }
-			       #addItemToppingCol5 {
+			       #add-topping-addonPrice {
 			       		width: 7%;
 			       		padding-right: 75px;
 			       }
-			       #addItemToppingCol6 {
+			       #add-topping-ExtraPrice {
 			       		width: 7%;
+			       		margin-right: 10px;
 			       		
 			       }
+			       #removeToppingDiv {
+			       		width: 20%;
 			       
+			       }
+			       	#removeTopping {
+			       		width: 30px;
+			       		height: 25px;
+			       		font-weight: bold;
+			       		margin-bottom: 3px;
+			       		margin-left: 10px;
+			       		margin-right: 5px;
+			       		padding-bottom: 3px;
+			       		font-size: 30px;
+			       		
+			       		margin-left: auto; 
+						margin-right: 5px;
+						
+						cursor: pointer;
+						border: 2px solid black;
+			        	border-radius: 3px;
+			       		background-color: rgb(255, 153, 153);
+			       	}
+			  
+			
+			.addToppingDiv {
+			 	width: 100%;
+			 	height: 40px;
+			 	display: flex;
+			    justify-content: center;
+				align-items: center;
+				text-align: center;
+				
+				margin-bottom: 20px;
+					
+			 }    
+			   .addTopping {
+		       		width: 2%;
+		       		height: 25px;
+		       		font-weight: bold;
+		       		margin-bottom: 3px;
+		       		margin-left: 10px;
+		       		margin-right: 5px;
+		       		padding-bottom: 3px;
+		       		font-size: 30px;
+		       		
+		       		display: flex;
+			      	justify-content: center;
+					align-items: center;
+					text-align: center;
+					
+					cursor: pointer;
+					border: 2px solid black;
+		        	border-radius: 3px;
+		       		background-color: rgb(92, 214, 92);
+			    }
 			       
 			       #addItemToppingParamTitle {
 			      		width: 25%;
@@ -365,6 +471,7 @@
 			      		color: red;
 			      		font-size: 15px;
 			      		text-align: right;
+			      		margin-bottom: 5px;
 			      	}
 			      
 			       input[type="text"] {
@@ -410,7 +517,7 @@
 				    position: relative;
 				    text-align: center;
 				    text-decoration: none;
-				    z-index: 1;
+				    z-index: 5;
 				    transform: perspective(1000px);
 				    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 				    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
@@ -418,11 +525,16 @@
 				  	font-size: 20px;
 				  	margin-right: 0px;
 			  }
+			  #typeSelectedOption {
+			  	position: relative;
+			    font-weight: bold;
+			  }
 			  #selectedOption {
 			    position: relative;
 			    font-weight: bold;
 			  }
 			
+			 
 			  .dropdown-menu {
 				    background-color: rgb(255, 136, 77);
 				    list-style-type: none;
@@ -458,13 +570,14 @@
 			  .dropdown-menu a:hover {
 				    background: rgb(179, 60, 0);
 				    color: #fff;
+				    z-index: 12;
 			  }
 			
 			  .dropdown:hover .dropdown-menu {
 				    background: rgb(255, 102, 26);
 				    opacity: 1;
 				    visibility: visible;
-				    z-index: 10;
+				    z-index: 12;
 			  }
   		/* END - Dropdown box styles. */	  
 		
