--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminAddItemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminAddItemPage.html
@@ -105,7 +105,7 @@
    						    <div id=addItemCol>
 	   							<div id="itemName">
 								    <span id="addItemParamTitle"> *Item Name: </span>
-								    <input type="text" name="itemName" >
+								    <input type="text" name="itemName" placeholder="Name">
 								</div>
 								<div id="checkItemName">
 								    <span id="emptyText"></span>
@@ -116,7 +116,7 @@
 							<div id=addItemCol>
 						      	<div id="categoryName">
 								    <span id="addItemParamTitle"> *Category: </span>
-								    <input type="text" name="categoryName" >
+								    <input type="text" name="categoryName" placeholder="Category">
 								</div>
 								<div id="checkCategoryName">
 								    <span id="emptyText"></span>
@@ -127,7 +127,7 @@
 							<div id=addItemCol>
 								<div id="itemPrice">
 								    <span id="addItemParamTitle"> *Price ($): </span>
-								    <input type="text" name="price" >
+								    <input type="text" name="itemPrice" placeholder="$0.00">
 								</div>
 								<div id="checkItemPrice">
 								    <span id="emptyText"></span>
@@ -147,29 +147,48 @@
 							    <div class="errorMessages" id="itemDescriptionErrorMessages"></div>
 							</div>
 						</div>	
-							
-						<div id="addInstructions-3"> Topping Instructions</div>
-						<div id="addInstructions-4"> Topping Type: </div>
-						<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp;default - This means the topping will have [Light] - [Normal] - [Extra].</div>
-						<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp;dropdown - This means topping will have multiple options. You will have to list these options seperated by a comma ( ' , ' ).</div>
-						<div id="addInstructions-4"> [Extra] Cost ($): </div>
-						<div id="addInstructions-5"> &nbsp;&nbsp;&nbsp;Additional price if user selects [Extra] on the topping. </div>
+						
+						<div id="instructions">
+        
+				            <div class="dropdown-container-instructions">
+				              <!-- HTML for the dropdown button -->
+				                <div id="instructionsTitleDiv"> 
+				                     v <span id="instructionsTitle">Topping Instructions</span> v 
+				                </div>
+				                <!-- HTML for the dropdown content -->
+				                <div class="dropdown-content-instructions" id="instructionsContent">
+				                
+				                    <div class="instructionsContent" >
+										<div id="addInstructions-4"> Topping Type: </div>
+										<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp;default - This means the topping will have [Light] - [Normal] - [Extra].</div>
+										<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp;dropdown - This means topping will have multiple options. You will have to list these options seperated by a comma ( ' , ' ).</div>
+										<div id="addInstructions-4"> [Extra] ($): </div>
+										<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp;Additional price if user selects [Extra] on the topping. </div>
+										<div id="addInstructions-4"> Addon ($): </div>
+										<div id="addInstructions-4"> &nbsp;&nbsp;&nbsp; Price of topping if it is an addon.</div>
+									</div>
+				                    
+				                    
+				                </div>
+				            </div>
+			        	</div>   
+						
 						
 						<div id="addInstructions-3"> Included Topping(s) (<i>optional</i>)</div>
 							
-						<div id="addItemRow1">	
+						<div id="addItemToppingRow">	
 						
-							<div id="addItemToppingCol1" class="addItemToppingCol">	
+							<div id="add-topping-title" class="addItemToppingCol">	
 								<div id="add-toppingTitle">
-									<span id="add-toppingTitleSpan">Topping</span>-
+									<span id="add-toppingTitleSpan">Topping</span> -
 								</div>
 								
 							</div>
 							
-							<div id="addItemToppingCol2" class="addItemToppingCol">
+							<div id="add-topping-name" class="addItemToppingCol">
 								<div id="add-toppingName">
 								    <span id="addItemToppingParamTitle"> Name: </span>
-								    <input type="text" name="price" >
+								    <input type="text" name="mainToppingsName" >
 								</div>
 								<div id="checkToppingName">
 								    <span id="emptyText"></span>
@@ -177,24 +196,24 @@
 								</div>
 							</div>	
 							
-							<div id="addItemToppingCol3" class="addItemToppingCol">	
+							<div id="add-topping-type" class="addItemToppingCol">	
 								<div id="add-toppingType">
 								    <span id="addItemToppingParamTitle"> Type: </span>
-								    <div class="dropdown">
-									    <div id="selectedOption">Select</div>
-									  	<ul class="dropdown-menu">
-										    <li><a href="#">default</a></li>
+								    <div class="dropdown" id="typeDropdown">
+									    <div id="typeSelectedOption">default</div>
+									  	<ul class="dropdown-menu" id="type-dropdown-menu">
 										    <li><a href="#">dropdown</a></li>
 										</ul>
 									</div>
 								</div>
+								<input type="hidden" value="default" name="toppingType" id="toppingTypeInput">
 								<div id="checkToppingType">
 								    <span id="emptyText"></span>
-								    <div class="errorMessages" id="emailErrorMessages"></div>
+								    <div class="errorMessages" id="toppingTypeErrorMessages"></div>
 								</div>
 							</div>
 							
-							<div id="addItemToppingCol3point5" class="addItemToppingCol">
+							<div id="add-topping-types" class="addItemToppingCol">
 								<div id="add-toppingTypes">
 								    <span id="addItemToppingParamTitle"> Types (,): </span>
 								    <input type="text" name="price" >
@@ -205,38 +224,27 @@
 								</div>
 							</div>	
 							
-							<div id="addItemToppingCol4" class="addItemToppingCol">	
-								<div id="add-toppingType">
+							<div id="add-topping-isPizza" class="addItemToppingCol">	
+								<div id="add-isPizza">
 								    <span id="addItemToppingParamTitle"> IsPizza: </span>
-								    <div class="dropdown">
-									    <div id="selectedOption">Select</div>
-									  	<ul class="dropdown-menu">
+								    <div class="dropdown" id="isPizzaDropdown">
+									    <div id="isPizzaSelectedOption">No</div>
+									  	<ul class="dropdown-menu" id="isPizza-dropdown-menu">
 										    <li><a href="#">Yes</a></li>
-										    <li><a href="#">No</a></li>
 										</ul>
 									</div>
 								</div>
+								<input type="hidden" value="Select" name="isPizza" id="isPizzaInput">
 								<div id="checkisPizza">
 								    <span id="emptyText"></span>
 								    <div class="errorMessages" id="isPizzaErrorMessages"></div>
 								</div>
 							</div>
 							
-							<div id="addItemToppingCol5" class="addItemToppingCol">
-								<div id="add-toppingAddonCost">
-								    <span id="addItemToppingParamTitle"> Addon ($): </span>
-								    <input type="text" name="price" >
-								</div>
-								<div id="checkToppingAddonCost">
-								    <span id="emptyText"></span>
-								    <div class="errorMessages" id="toppingAddonCostErrorMessages"></div>
-								</div>
-							</div>	
-							
-							<div id="addItemToppingCol6" class="addItemToppingCol">
+							<div id="add-topping-ExtraPrice" class="addItemToppingCol">
 								<div id="add-toppingExtraCost">
 								    <span id="addItemToppingParamTitle"> [Extra] ($): </span>
-								    <input type="text" name="price" >
+								    <input type="text" name="mainToppings[0][additionalCostExtra]" >
 								</div>
 								<div id="checkToppingExtraCost">
 								    <span id="emptyText"></span>
@@ -244,25 +252,116 @@
 								</div>
 							</div>	
 							
-							<div>+</div>
-							
+							<div id="removeToppingDiv">
+								<div id="removeTopping"> - </div>
+							</div>
+						</div>	
+						
+						<div id="addMainToppingDiv" class="addToppingDiv">	
+							<div id="addMainTopping" class="addTopping"> + </div>	
 						</div>	
 							
+						
+						
+						<div id="addInstructions-3"> Add-on Topping(s) (<i>optional</i>)</div>
 							
+						<div id="addItemToppingRow">	
+						
+							<div id="add-topping-title" class="addItemToppingCol">	
+								<div id="add-toppingTitle">
+									<span id="add-toppingTitleSpan">Topping</span> -
+								</div>
+								
+							</div>
 							
-							<div id="signUpEmail">
-							    <span id="signUpParamTitle"> Extra Toppings (optional): </span>
-							    <input type="text" name="extraToppings" >
+							<div id="add-topping-name" class="addItemToppingCol">
+								<div id="add-toppingName">
+								    <span id="addItemToppingParamTitle"> Name: </span>
+								    <input type="text" name="mainToppingsName" >
+								</div>
+								<div id="checkToppingName">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="toppingNameErrorMessages"></div>
+								</div>
+							</div>	
+							
+							<div id="add-topping-type" class="addItemToppingCol">	
+								<div id="add-toppingType">
+								    <span id="addItemToppingParamTitle"> Type: </span>
+								    <div class="dropdown" id="typeDropdown">
+									    <div id="typeSelectedOption">default</div>
+									  	<ul class="dropdown-menu" id="type-dropdown-menu">
+										    <li><a href="#">dropdown</a></li>
+										</ul>
+									</div>
+								</div>
+								<input type="hidden" value="default" name="toppingType" id="toppingTypeInput">
+								<div id="checkToppingType">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="toppingTypeErrorMessages"></div>
+								</div>
 							</div>
-							<div id="signUpCheckEmail">
-							    <span id="emptyText"></span>
-							    <div class="errorMessages" id="emailErrorMessages"></div>
+							
+							<div id="add-topping-types" class="addItemToppingCol">
+								<div id="add-toppingTypes">
+								    <span id="addItemToppingParamTitle"> Types (,): </span>
+								    <input type="text" name="price" >
+								</div>
+								<div id="checkToppingTypes">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="toppingTypesErrorMessages"></div>
+								</div>
+							</div>	
+							
+							<div id="add-topping-isPizza" class="addItemToppingCol">	
+								<div id="add-isPizza">
+								    <span id="addItemToppingParamTitle"> IsPizza: </span>
+								    <div class="dropdown" id="isPizzaDropdown">
+									    <div id="isPizzaSelectedOption">No</div>
+									  	<ul class="dropdown-menu" id="isPizza-dropdown-menu">
+										    <li><a href="#">Yes</a></li>
+										</ul>
+									</div>
+								</div>
+								<input type="hidden" value="Select" name="isPizza" id="isPizzaInput">
+								<div id="checkisPizza">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="isPizzaErrorMessages"></div>
+								</div>
 							</div>
-					        
-					        
+							
+							<div id="add-topping-addonPrice" class="addItemToppingCol">
+								<div id="add-toppingAddonCost">
+								    <span id="addItemToppingParamTitle"> Addon ($): </span>
+								    <input type="text" name="mainToppings[0][additionalCostAddon]" >
+								</div>
+								<div id="checkToppingAddonCost">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="toppingAddonCostErrorMessages"></div>
+								</div>
+							</div>	
+							
+							<div id="add-topping-ExtraPrice" class="addItemToppingCol">
+								<div id="add-toppingExtraCost">
+								    <span id="addItemToppingParamTitle"> [Extra] ($): </span>
+								    <input type="text" name="mainToppings[0][additionalCostExtra]" >
+								</div>
+								<div id="checkToppingExtraCost">
+								    <span id="emptyText"></span>
+								    <div class="errorMessages" id="toppingExtraCostErrorMessages"></div>
+								</div>
+							</div>	
+							
+							<div id="removeTopping"> - </div>
+							
+						</div>
+						
+					        <div id="addAddonToppingDiv" class="addToppingDiv">	
+							<div id="addAddonTopping" class="addTopping"> + </div>	
+						</div>	
 					       
-				        	<input type="submit" value="Add to Menu">
-				      	</form>
+				        <input type="submit" value="Add to Menu">
+				   </form>
    					  
 
 			    </div>
@@ -299,8 +398,12 @@
 	
 	<script src="/javaScript/adminPages/adminClicksOnItemInDelete.js"></script>
 	<script src="/javaScript/adminPages/adminClicksAdminHome.js"></script>
-	<script src="/javaScript/adminPages/addItem-ItemDescription.js"></script>
-	
+	<script src="/javaScript/adminPages/admin-AddItem-ItemDescription.js"></script>
+	<script src="/javaScript/adminPages/admin-AddItem-ConfirmParameters.js"></script>
+	<script src="/javaScript/adminPages/admin-AddItem-InstructionsDropdown.js"></script>
+	<script src="/javaScript/adminPages/admin-AddItem-ToppingSelectedOptions.js"></script>
+	<script src="/javaScript/adminPages/admin-AddItem-RemoveTopping.js"></script>
+	<script src="/javaScript/adminPages/admin-AddItem-AddTopping.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
 	<script src="/javaScript/errorRedirectPopup.js"></script>
