--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
@@ -260,7 +260,7 @@
 				      position: relative; 
 				      z-index: 1;  /* make sure the content is above other elements on the page */
 				      display: flex;  
-				      padding-bottom: 5px;
+				      padding-bottom: 0px;
 				      padding-left: 10px;
 				      padding-top: 5px;
 				      
@@ -332,10 +332,11 @@
 			       #add-topping-ExtraPrice {
 			       		width: 7%;
 			       		margin-right: 10px;
+			       		margin-left: 10px;
 			       		
 			       }
 			       #removeToppingDiv {
-			       		width: 20%;
+			       		width: 20%;\
 			       
 			       }
 			       	#removeTopping {
@@ -345,12 +346,17 @@
 			       		margin-bottom: 3px;
 			       		margin-left: 10px;
 			       		margin-right: 5px;
-			       		padding-bottom: 3px;
+			       		padding-bottom: 0px;
 			       		font-size: 30px;
 			       		
 			       		margin-left: auto; 
 						margin-right: 5px;
 						
+						display: flex;
+					    justify-content: center;
+						align-items: center;
+						text-align: center;
+				
 						cursor: pointer;
 						border: 2px solid black;
 			        	border-radius: 3px;
@@ -376,7 +382,7 @@
 		       		margin-bottom: 3px;
 		       		margin-left: 10px;
 		       		margin-right: 5px;
-		       		padding-bottom: 3px;
+		       		padding-bottom: 0px;
 		       		font-size: 30px;
 		       		
 		       		display: flex;
@@ -399,7 +405,7 @@
 						white-space: nowrap;
 						
 						padding-right: 8px;
-						margin-bottom: 7px;
+						margin-bottom: 0px;
 			      	
 			       	}
 			      	#add-toppingTitle {
@@ -482,7 +488,7 @@
 					align-items: center;
 					text-align: center;
 					
-					margin-bottom: 5px;
+					margin-bottom: 0px;
 			       }
 			      input[type="submit"] {
 			      	width: 200px;
