--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
@@ -1,6 +1,9 @@
 
 	@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 	
+	#content {
+		min-height: 100%;
+	}
 	#pageBody {
 		width: 1400px;
 	    min-width: 99%;
@@ -23,7 +26,7 @@
 	
 		#storeLocation {
 			width: 33%;
-			height: 100%;
+			min-height: 100%;
 			
 			display: flex;
 			align-items: center;
@@ -73,7 +76,7 @@
 		
 		#addItemDiv {
 			width: 100%;
-			height: 800px;
+			min-height: 700px;
 			
 			display: flex;
 			flex-direction: column;
@@ -108,7 +111,7 @@
 			}
 			#addItemFields {
 				width: 90%;
-				height: 100%;
+				min-height: 100%;
 				
 				display: flex;
 				flex-direction: column;
@@ -118,7 +121,8 @@
 				text-align: center;
 				
 				padding-top: 20px;
-				margin: auto;
+				margin-left: auto;
+				margin-right: auto;
 			}
 		 	 #addItemForm {
 		      	width: 100%;
@@ -336,7 +340,7 @@
 			       		
 			       }
 			       #removeToppingDiv {
-			       		width: 20%;\
+			       		width: 20%;
 			       
 			       }
 			       	#removeTopping {
@@ -478,6 +482,7 @@
 			      		font-size: 15px;
 			      		text-align: right;
 			      		margin-bottom: 5px;
+			      		white-space: nowrap;
 			      	}
 			      
 			       input[type="text"] {
