--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminEditItemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminEditItemPage.html
@@ -7,7 +7,7 @@
 <title>Online Pizza Ordering</title>
 
 <link rel="stylesheet" href="/cssStyles/backgroundAndTopBar.css">
-<link rel="stylesheet" href="/cssStyles/admin/adminAddItem.css">
+<link rel="stylesheet" href="/cssStyles/admin/adminEditItem.css">
 <link rel="stylesheet" href="/cssStyles/bottomLinks.css">
 
 
@@ -151,7 +151,7 @@
 								</div>
 								<div id="addImageRow">
 									<input type="file" name="jpgFile" accept=".jpg" />
-									<div id="addImageText"><i>If no image is added, item will be given a default image. <b>Must be a jpg image.</b></i></div>
+									<div id="addImageText"><i>If no image is added, item will be given a default image.</i></div>
 								</div>
 							</div>
 						</div>	
