--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
@@ -97,7 +97,7 @@
    			
    			<div id="showAllItemsDiv">
    				<div id="deleteInstructions"> Click on an Item to be view its description and ingredients. </div>
-   			 	<div id="deleteInstructions"> While there you will have an option to delete the Item. </div>
+   			 	<div id="deleteInstructions"> While there you will have an option to <span id="deleteText">&nbsp;delete&nbsp;</span> the Item. </div>
    				<div id="showAllItemsTextDiv">
    				
    					  <div id="rowOne-firstFourCategories">
