top header html and js item creation java and image from add item.

--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllDeletePage.html
@@ -17,74 +17,11 @@
   <div class="container">
    	<div class="content">
    	
-   		<div id="topHeader">
-			<div id="logo">
-				<img id="pizzaLogo" src="/images/PizzaLogo.jpg">
-			</div>
-			<div id="hours">
-				<div id="operatingHours">Hours</div>
-					<div id="hiddenOperatingHours">
-						<div id="day">Mon: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Tue: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Wed: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Thr: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Fri: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Sat: <span id="dayHours"> 11:00am - 7:00pm </span>	</div>
-						<div id="day">Sun: <span id="dayHours"> Closed </span>				</div>
-					
-					</div>
-				<div id="openClosed">Open</div>
-			</div>
-			<div id="pizzas">	<span id="pizzasText">Pizzas</span>		</div>
-				<div id="hiddenPizzas">
-					<div id="item">Custom Pizza</div>
-					<div id="item">Pepperoni Pizza</div>
-					<div id="item">Three Meat Pizza</div>
-				</div>
-			<div id="sides">	<span id="sidesText">Sides</span>		</div>
-				<div id="hiddenSides">
-					<div id="item">Breadsticks</div>
-					<div id="item">Cheesesticks</div>
-					<div id="item">Motz Sticks</div>
-					<div id="item">Pretzel Sticks</div>
-				</div>
-			<div id="wings">	<span id="wingsText">Wings</span>		</div>
-				<div id="hiddenWings">
-					<div id="item">Ranch Wings</div>
-					<div id="item">Mild Wings</div>
-					<div id="item">Boneless Wings</div>
-				</div>
-			<div id="pasta">	<span id="pastaText">Pasta</span>		</div>
-				<div id="hiddenPasta">
-					<div id="item">Ziti Pasta</div>
-					<div id="item">spaghetti Pasta</div>
-				</div>
-			<div id="wedgie">	<span id="wedgieText">Wedgie</span>		</div>
-				<div id="hiddenWedgie">
-					<div id="item">Pepperoni Wedgie</div>
-					<div id="item">Steak Wedgie</div>
-					<div id="item">Beef Wedgie</div>
-				</div>
-			<div id="desserts">	<span id="dessertsText">Desserts</span>	</div>
-				<div id="hiddenDesserts">
-					<div id="item">Pizza Cake</div>
-					<div id="item">Pizza Brownie</div>
-				</div>
-			<div id="drinks">	<span id="drinksText">Drinks</span>		</div>
-				<div id="hiddenDrinks">
-					<div id="item">Mt Dew</div>
-					<div id="item">Coke</div>
-					<div id="item">Root Beer</div>
-				</div>
-			<div id="misc">		<span id="miscText">Misc</span>			</div>
-				<div id="hiddenMisc">
-					<div id="item">Salad</div>
-					<div id="item">Dips</div>				
-				</div>
-			<div id="spaceBetween"></div>
-			<div id="login">Login-in | Sign-up</div>
-			<div id="checkout">Checkout</div>
+   		<!-- Listing category names to pass to JavaScript. -->
+   		<div hidden >
+		    <p th:each="category : ${itemCategories}" th:id="'categoryName' + ${category}" th:text="${category}"></p>
 		</div>
+   		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
 		
    		<div id="pageBody">
    			<div id="body-headers">
@@ -170,6 +107,8 @@
    			
    	</div>
   </div>
+
+	<script src="/javaScript/topHeaderHtml.js"></script>
 
 	<script src="/javaScript/showOperatingHours.js"></script>
 	<script src="/javaScript/menuOptions/showPizzas.js"></script>
