--- a/pizza-ordedring-app/src/main/resources/templates/homePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/homePage.html
@@ -27,7 +27,7 @@
 		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
 		
-		
+		<span id="popup" th:text="${showError}" style="display: none;"></span>
 		
    		<div id="pageBody">
    			<div id="body-headers">
@@ -165,6 +165,7 @@
   </div>
 
 	<script  src="/javaScript/topHeaderHtml.js"></script>
+	<script  src="/javaScript/showPopupError.js"></script>
 
 	<script src="/javaScript/showOperatingHours.js"></script>
 	<script src="/javaScript/menuOptions/showPizzas.js"></script>
