--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -21,12 +21,15 @@
    		<div hidden >
 		    <p th:each="category : ${itemCategories}" th:id="'categoryName' + ${category}" th:text="${category}"></p>
 		</div>
-   		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
+   		<!-- Listing item names to pass to JavaScript. -->
+		<div hidden>
+		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
+		</div>
 		
    		<div id="pageBody">
    			<div id="body-headers">
    				<div id="storeLocation"> 156 Elderwood Ave </div>
-   				<div id="categoryTitle"> Dessert(s) </div>
+   				<div id="categoryTitle"> [[${item.getCategory()}]] </div>
    				<div id="searchMenu">
    					Search:  
    					<div id="searchDiv">
@@ -37,43 +40,64 @@
    				</div>
    			</div>
    			
+   			
+   			<div th:each="topping : ${item.getIncludedToppings()}" id="hiddenIncludedToppings" hidden>
+				    
+				    <p id="toppingName" th:text="${topping.getToppingName()}"></p>
+				    <p id="toppingType" th:text="${topping.getToppingType()}"></p>
+				    <p id="isPizza" th:text="${topping.getIsPizza()}"></p>
+				    <p id="toppingOptions" th:each="toppOpt : ${topping.getToppingOptions()}" th:text="${toppOpt}"></p>
+				    <p id="additionalCostExtra" th:text="${topping.getAdditionalCostExtra()}"></p>
+				    
+			</div>
+			<div th:each="topping : ${item.getAdditionalToppings()}" id="hiddenAdditionalToppings" hidden>
+				    
+				    <p id="toppingName" th:text="${topping.getToppingName()}"></p>
+				    <p id="toppingType" th:text="${topping.getToppingType()}"></p>
+				    <p id="isPizza" th:text="${topping.getIsPizza()}"></p>
+				    <p id="toppingOptions" th:each="toppOpt : ${topping.getToppingOptions()}" th:text="${toppOpt}"></p>
+				    <p id="additionalCostExtra" th:text="${topping.getAdditionalCostExtra()}"></p>
+				    <p id="additionalCostAddon" th:text="${topping.getAdditionalCostAddon()}"></p>
+				    
+			</div>
+   			
+   			
    			<div id="imageAndDesc">
    				<div id="itemImgDiv"> 
-	   				<img id="itemImg" src="/images/items/desserts/brownie.jpg">
+	   				<img id="itemImg" th:src="${item.getImageUrl()}">
    				</div>
    				<div id="itemDescDiv">
    					<div id="itemName">
-   						Brownie
+   						[[${item.getItemName()}]] $[[${item.getItemDefaultCost()}]]
    					</div>
    					<div id="itemDesc">
-   						This is the description for the item that is shown above me. 
-   						I made this extra long to test length.
-   						This is the description for the item that is shown above me. 
-   						I made this extra long to test length.
+   						[[${item.getItemDesc()}]]
    					</div>
    				</div>
    			</div>
    			<div id="mainOptions">
-   				<div id="mainOptions-dropdownContainer">
-   					<label id="dropdownLabelName">Sauce Type: </label>
-	   				<div class="dropdown">
-					  	<div id="selectedOption">Select</div>
-					  	<ul class="dropdown-menu">
-						    <li><a href="#">Red Sauce</a></li>
-						    <li><a href="#">Spicy Sauce</a></li>
-						    <li><a href="#">Tomato Sauce</a></li>
-						    <li><a href="#">Light Sauce</a></li>
-						</ul>
-					</div>
-					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   			 </div>
-				</div>
+   			
+   			
+   				<!-- Insert main toppings html here from insertToppingInfo -->
    				
-   				<div id="mainOption-toppings">
-   					<div id="mainOption-toppingsTitleDiv"><span id="mainOption-toppingsTitle">Toppings</span></div>
+	   				<div id="mainOptions-dropdownContainer">
+	   					<label id="dropdownLabelName">Sauce Type: </label>
+		   				<div class="dropdown">
+						  	<div id="selectedOption">Select</div>
+						  	<ul class="dropdown-menu">
+							    <li><a href="#">Red Sauce</a></li>
+							    <li><a href="#">Spicy Sauce</a></li>
+							    <li><a href="#">Tomato Sauce</a></li>
+							    <li><a href="#">Light Sauce</a></li>
+							</ul>
+						</div>
+						<div id="amountDiv">
+			   					<div id="light"> <span id="lightText">Light</span> </div>
+			   					<div id="normal"> <span id="normalText">Normal</span> </div>
+			   					<div id="extra"> <span id="extraText">Extra</span> </div>
+			   			 </div>
+					</div>
+   				
 	   				
 	   				<div id="lightNormalExtra">
 	   				
@@ -121,7 +145,7 @@
 	   				
 	   				</div>
    			
-   				</div>
+   				
    			</div>
    			
    			<div id="add-ons_Extra">
@@ -293,6 +317,7 @@
 	<script src="/javaScript/itemPage/updateSelectedOption-itemPage.js"></script>
 	<script src="/javaScript/itemPage/selectedOptions-itemPage.js"></script>
 	<script src="/javaScript/itemPage/removeSelectedOption-itemPage.js"></script>
+	<script src="/javaScript/itemPage/insertToppingInfo.js"></script>
 	
 	<script src="/javaScript/usesCommentsCharLeft.js"></script>
 	
